--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,8 @@ dependencies:
   pre:
     - curl -L https://cpanmin.us | perl - --sudo App::cpanminus
   post:
-    - cpanm --installdeps .
+    - cpanm prove
+    - cpanm --local-lib=~/perl5 --installdeps .
 test:
   override:
-    - perl Makefile.PL && make && make test
+    - perl Makefile.PL && make && prove -l ~/perl5
